[package]
name = "oaid-mcp-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MCP server for AI agents to use Open Agent ID credentials securely"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
crypto_box = "0.9"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rpassword = "7"
aes-gcm = "0.10"
argon2 = "0.5"
